--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Aura</title>
+    <title>Project Hazel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="Landing_Page.css">
@@ -206,23 +206,29 @@
     <section id="team" class="team-section">
         <div class="container">
             <h2 class="section-title">Meet Our Team</h2>
-            <p class="team-subtitle">The brilliant minds behind Project Hazel</p>
+            <p class="team-subtitle">The brilliant minds behind Project Aura</p>
 
             <div class="team-grid">
                 <div class="team-member">
-                    <div class="team-photo"></div>
+                    <div class="team-photo">
+                        <img src="./pics/member1.png" alt="Team Member 01">
+                    </div>
                     <h4>Team Member 01</h4>
                     <p>Role | Bio | Expertise</p>
                 </div>
 
                 <div class="team-member">
-                    <div class="team-photo"></div>
+                    <div class="team-photo">
+                        <img src="./pics/member2.jpg" alt="Team Member 02">
+                    </div>
                     <h4>Team Member 02</h4>
                     <p>Role | Bio | Expertise</p>
                 </div>
 
                 <div class="team-member">
-                    <div class="team-photo"></div>
+                    <div class="team-photo">
+                        <img src="./pics/member3.jpg" alt="Team Member 03">
+                    </div>
                     <h4>Team Member 03</h4>
                     <p>Role | Bio | Expertise</p>
                 </div>
@@ -231,7 +237,9 @@
             <div class="row justify-content-center mt-4">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="team-member">
-                        <div class="team-photo"></div>
+                        <div class="team-photo">
+                            <img src="member4.jpg" alt="Team Member 04">
+                        </div>
                         <h4>Team Member 04</h4>
                         <p>Role | Bio | Expertise</p>
                     </div>
@@ -239,7 +247,9 @@
 
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="team-member">
-                        <div class="team-photo"></div>
+                        <div class="team-photo">
+                            <img src="member5.jpg" alt="Team Member 05">
+                        </div>
                         <h4>Team Member 05</h4>
                         <p>Role | Bio | Expertise</p>
                     </div>
