--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -113,7 +113,9 @@
             <div class="about-item">
                 <div class="row align-items-center">
                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <div class="about-image">Image Placeholder</div>
+                        <div class="about-image">
+                            <img src="./pics/pic2.jpg" alt="What is Hazel">
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="about-content">
@@ -131,7 +133,9 @@
             <div class="about-item">
                 <div class="row align-items-center">
                     <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
-                        <div class="about-image">Image Placeholder</div>
+                        <div class="about-image">
+                            <img src="about2.jpg" alt="How It Began">
+                        </div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="about-content">
@@ -187,14 +191,14 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <div class="tech-badges">
-                        <span class="tech-badge">React.js</span>
-                        <span class="tech-badge">Node.js</span>
-                        <span class="tech-badge">PostgreSQL</span>
+                        <span class="tech-badge">Raspberry Pi 5</span>
+                        <span class="tech-badge">Gemini Pro AI</span>
+                        <span class="tech-badge">Computer Vision</span>
                         <span class="tech-badge">Python</span>
-                        <span class="tech-badge">TensorFlow</span>
-                        <span class="tech-badge">AWS</span>
-                        <span class="tech-badge">Docker</span>
-                        <span class="tech-badge">MongoDB</span>
+                        <span class="tech-badge">AMOLED Display</span>
+                        <span class="tech-badge">RGB Lighting</span>
+                        <span class="tech-badge">Gesture Control</span>
+                        <span class="tech-badge">Music Player</span>
                     </div>
                     <div class="tech-image"></div>
                 </div>
@@ -206,14 +210,14 @@
     <section id="team" class="team-section">
         <div class="container">
             <h2 class="section-title">Meet Our Team</h2>
-            <p class="team-subtitle">The brilliant minds behind Project Aura</p>
+            <p class="team-subtitle">The brilliant minds behind Project Hazel</p>
 
             <div class="team-grid">
                 <div class="team-member">
                     <div class="team-photo">
                         <img src="./pics/member1.png" alt="Team Member 01">
                     </div>
-                    <h4>Team Member 01</h4>
+                    <h4>Onitha Hettiarachchi</h4>
                     <p>Role | Bio | Expertise</p>
                 </div>
 
@@ -221,7 +225,7 @@
                     <div class="team-photo">
                         <img src="./pics/member2.jpg" alt="Team Member 02">
                     </div>
-                    <h4>Team Member 02</h4>
+                    <h4>Limuthu Karunasinghe</h4>
                     <p>Role | Bio | Expertise</p>
                 </div>
 
@@ -229,7 +233,7 @@
                     <div class="team-photo">
                         <img src="./pics/member3.jpg" alt="Team Member 03">
                     </div>
-                    <h4>Team Member 03</h4>
+                    <h4>Maleesha Bandaranayake</h4>
                     <p>Role | Bio | Expertise</p>
                 </div>
             </div>
