ass pics and minor chnages

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -242,9 +242,9 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="team-member">
                         <div class="team-photo">
-                            <img src="member4.jpg" alt="Team Member 04">
+                            <img src="./pics/member4.jpg" alt="Team Member 04">
                         </div>
-                        <h4>Team Member 04</h4>
+                        <h4>Nethmi Himasha</h4>
                         <p>Role | Bio | Expertise</p>
                     </div>
                 </div>
