--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -252,9 +252,9 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="team-member">
                         <div class="team-photo">
-                            <img src="member5.jpg" alt="Team Member 05">
+                            <img src="./pics/member5.jpg" alt="Team Member 05">
                         </div>
-                        <h4>Team Member 05</h4>
+                        <h4>Sandevnee Periyapperuma</h4>
                         <p>Role | Bio | Expertise</p>
                     </div>
                 </div>
