--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -112,9 +112,9 @@
 
             <div class="about-item">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4 mb-lg-0">
+                    <div class="col-lg-6 mb-lg-0">
                         <div class="about-image">
-                            <img src="./pics/pic2.jpg" alt="What is Hazel">
+                            <img src="./pics/pic3.png" alt="What is Hazel">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -132,9 +132,9 @@
 
             <div class="about-item">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
+                    <div class="col-lg-6 order-lg-2">
                         <div class="about-image">
-                            <img src="about2.jpg" alt="How It Began">
+                            <img src="./pics/pic2.jpg" alt="How It Began">
                         </div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
