major color palette changes

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -16,8 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="./pics/logo.png" alt="Project Aura Logo" class="navbar-logo">
-                <span>Project Hazel</span>
+                <img src="./pics/logo.png" alt="Project Aura Logo" class="navbar-logo" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -57,6 +56,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Vision Section -->
     <section class="vision-section">
@@ -108,7 +108,7 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <div class="container">
-            <h2 class="section-title">About Project Hazel</h2>
+            <h2 class="about-title">About Project Hazel</h2>
 
             <div class="about-item">
                 <div class="row align-items-center">
@@ -154,7 +154,7 @@
 
     <!-- Features Carousel Section -->
     <section class="slider-section">
-        <div class="container">
+        <div class="s-container">
             <h2 class="feature-section-title">Why Choose Hazel?</h2>
             <p class="feature-section-subtitle">Unlike voice assistants, Hazel has a physical presence with expressive
                 AMOLED
@@ -183,8 +183,8 @@
     <!-- Technology Stack Section -->
     <section class="tech-section">
         <div class="container">
-            <h2 class="section-title">Technology Stack</h2>
-            <p class="section-subtitle">We leverage cutting-edge technologies to deliver the best experience. Our system
+            <h2 class="contact-title">Technology Stack</h2>
+            <p class="contact-subtitle">We leverage cutting-edge technologies to deliver the best experience. Our system
                 is scalable, secure, and built with modern best practices to ensure optimal performance and reliability.
             </p>
 
@@ -265,8 +265,8 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2 class="section-title">Get in Touch</h2>
-            <p class="section-subtitle">Interested in Project Hazel? We'd love to hear from you!</p>
+            <h2 class="contact-title" >Get in Touch</h2>
+            <p class="contact-subtitle">Interested in Project Hazel? We'd love to hear from you!</p>
 
             <div class="contact-cards">
                 <div class="contact-card">
@@ -291,9 +291,9 @@
                     </div>
                     <h4>Social</h4>
                     <p>
-                        <a href="#" style="color: #666; margin: 0 10px;"><i class="fab fa-twitter fa-lg"></i></a>
-                        <a href="#" style="color: #666; margin: 0 10px;"><i class="fab fa-linkedin fa-lg"></i></a>
-                        <a href="#" style="color: #666; margin: 0 10px;"><i class="fab fa-github fa-lg"></i></a>
+                        <a href="#" style="color: #ffffff; margin: 0 10px;"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="#" style="color: #ffffff; margin: 0 10px;"><i class="fab fa-linkedin fa-lg"></i></a>
+                        <a href="#" style="color: #ffffff; margin: 0 10px;"><i class="fab fa-github fa-lg"></i></a>
                     </p>
                 </div>
             </div>
